--- a/public/style.css
+++ b/public/style.css
@@ -78,7 +78,10 @@ body {
     border-left: 6px solid #2196f3;
 }
 .solicitud strong {
-    font-size: 1rem;
+    font-size: 2rem;
+}
+.solicitud{
+    font-size: 2.5rem;
 }
 
 /* BOTONES */
@@ -198,7 +201,6 @@ input, select {
 /* ===== DESKTOP ===== */
 @media (min-width: 768px) {
     .app {
-        max-width: 700px;
         margin: auto;
     }
 
