--- a/public/style.css
+++ b/public/style.css
@@ -139,8 +139,45 @@ body {
     font-size: 0.85rem;
     opacity: 0.9;
 }
+.resultado-intercambio{
+    display: flex;
+    justify-content: space-between;
+    gap: 12px;
+    margin-top: 12px;
+}
+.resultado-item{
+    margin: 5px;
+    border-radius: 20px;
+    background-color: #2ecc71;
+    flex: 1;
+    background: #f5f5f5;
+    border-radius: 12px;
+    padding: 10px;
+    text-align: center;
+    position: relative;
+}
 
+.resultado-item::after {
+    content: attr(data-grupo);
+    position: absolute;
+    bottom: -28px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #111;
+    color: #fff;
+    font-size: 0.75rem;
+    padding: 4px 8px;
+    border-radius: 6px;
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease;
+}
 
+/* Mostrar en hover */
+.resultado-item:hover::after {
+    opacity: 1;
+}
 /* BOTONES */
 button {
     cursor: pointer;
