--- a/public/style.css
+++ b/public/style.css
@@ -148,13 +148,14 @@ body {
 .resultado-item{
     margin: 5px;
     border-radius: 20px;
-    background-color: #2ecc71;
+    background-color: #2ecc71 !important;
     flex: 1;
     background: #f5f5f5;
     border-radius: 12px;
     padding: 10px;
     text-align: center;
     position: relative;
+    font-size: 2rem;
 }
 
 .resultado-item::after {
